started about me page -- re-uploaded project-buttons image so it's less blurry. Fixed up Projects with What's New.

--- a/projects/project-style.css
+++ b/projects/project-style.css
@@ -113,7 +113,7 @@ body, html {
       width: 69.9vw;
       height: 31.8vw;
       position: absolute;
-      left: 21.81vw;
+      left: 25.5vw;
       top: 20.81vh;
       overflow-y: auto; /* VERTICAL scrolling */
       overflow-x: hidden; /* NO HORIZONTAL scrolling */
@@ -179,6 +179,7 @@ body, html {
       font-family: 'LeagueSpartan', sans-serif;
       font-size: 300;
     }
+
 
     a {
       font-family: 'LeagueSpartan', sans-serif;
